--- a/index.html
+++ b/index.html
@@ -1,85 +1,61 @@
 <!doctype html>
-<html lang="fr">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bélli et Bien-être — Cosmétiques</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+<div class="price">34,00 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit8.jpg" alt="Gommage">
+<div class="product-title">Gommage Sucre & Coco</div>
+<div class="product-desc">Exfolie, adoucit et illumine la peau instantanément.</div>
+<div class="price">19,50 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit4.jpg" alt="Huile corps">
+<div class="product-title">Huile Corps Satinée</div>
+<div class="product-desc">Nourrit intensément et laisse un fini lumineux.</div>
+<div class="price">27,00 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+</div>
 
 
-<style>
-:root {
---bg: #fdfdfd;
---accent: #b76ba3;
---accent2: #6bb3b7;
---muted: #333;
---card: #fff;
---shadow: rgba(0, 0, 0, 0.15);
---text-footer: #000;
---text-hero: #000;
-}
+<h3 style="color:var(--accent)">Accessoires & parfums</h3>
+<div class="grid cols-3">
+<article class="card">
+<img src="assets/images/produit5.jpg" alt="Brume Hydratante">
+<div class="product-title">Brume Hydratante</div>
+<div class="product-desc">Hydrate, rafraîchit et illumine le teint.</div>
+<div class="price">15,90 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit9.jpg" alt="Roller Jade">
+<div class="product-title">Roller de Jade Premium</div>
+<div class="product-desc">Stimule la microcirculation et raffermit la peau.</div>
+<div class="price">22,90 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit6.jpg" alt="Crème Nuit">
+<div class="product-title">Crème Nuit Confort</div>
+<div class="product-desc">Hydratation profonde et apaisement immédiat.</div>
+<div class="price">31,50 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+</div>
+</section>
 
 
-* { box-sizing: border-box; margin: 0; padding: 0; }
-body {
-font-family: 'Inter', sans-serif;
-background: var(--bg);
-color: #111;
-line-height: 1.6;
-}
-
-
-header {
-position: fixed;
-top: 0;
-width: 100%;
-background: var(--accent2);
-padding: 12px 0;
-z-index: 1000;
-box-shadow: 0 4px 12px var(--shadow);
-}
-.container { max-width: 1200px; margin: 0 auto; padding: 0 24px; }
-
-
-.tabs {
-display: flex;
-gap: 12px;
-flex-wrap: wrap;
-overflow-x: auto;
-}
-.tab {
-padding: 8px 12px;
-border-radius: 12px;
-background: transparent;
-cursor: pointer;
-font-weight: 600;
-font-family: 'Playfair Display', serif;
-flex: 0 0 auto;
-white-space: nowrap;
-transition: 0.3s;
-}
-.tab.active { background: var(--accent); color: #fff; box-shadow: 0 6px 18px var(--shadow); }
-
-
-.hero {
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-padding: 120px 24px 40px;
-background: linear-gradient(rgba(183,107,163,0.4), rgba(107,179,183,0.4)), url('assets/images/hero-bg.jpg') center/cover no-repeat;
-text-align: center;
-color: var(--text-hero);
-}
-.hero h1 { font-size: clamp(28px,6vw,48px); margin-bottom: 16px; }
-.hero p { font-size: clamp(16px,2.5vw,18px); margin-bottom: 24px; }
-.cta { display: inline-block; padding: 12px 24px; border-radius: 24px; background: linear-gradient(135deg,var(--accent),var(--accent2)); color:#fff; text-decoration:none; font-weight:700; transition:0.3s; }
-.cta:hover { opacity:0.85; transform:translateY(-3px); }
-
-
-section { padding: 60px 0; }
-section:nth-of-type(even) { background: var(--accent2); color: #fff; }
-h2,h3 { font-family:'Playfair Display', serif; margin-bottom:24px; }
+<!-- BEAUTÉ -->
+<section id="beaute" class="tab-panel" hidden>
+<h2>Beauté & Conseil</h2>
+<p style="color:var(--muted)">Découvrez nos conseils pour prendre soin de votre peau et de votre bien-être au quotidien.</p>
+<h3>Routine Matinale</h3>
+<p style="color:var(--muted)">Nettoyez votre visage, appliquez un sérum hydratant et terminez par votre crème solaire pour protéger votre peau.</p>
+<h3>Routine du Soir</h3>
+<p style="color:var(--muted)">Démaquillez-vous, appliquez un sérum régénérant et terminez avec votre crème de nuit pour nourrir la peau pendant le sommeil.</p>
+<h3>Conseils Bien-être</h3>
+<p style="color:var(--muted)">Buvez suffisamment d'eau, dormez bien et faites des pauses détente pour améliorer l'éclat de votre peau.</p>
 </section>
 
   <!-- CONTACT -->
