--- a/index.html
+++ b/index.html
@@ -172,80 +172,8 @@
   <!-- PRODUITS -->
   <section id="produits" class="tab-panel" hidden>
     <h2>Nos produits</h2>
-   <h3 style="color:var(--accent)">Soin du visage</h3>
-      <div class="grid cols-3">
-        <article class="card">
-          <img src="assets/images/produit1.jpg" alt="Sérum Éclat">
-          <div class="product-title">Sérum Éclat</div>
-          <div class="product-desc">Illumine, hydrate et unifie le teint.</div>
-          <div class="price">29,90 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit2.jpg" alt="Crème de Jour">
-          <div class="product-title">Crème de Jour Réparatrice</div>
-          <div class="product-desc">Hydratation intense, texture douce et non grasse.</div>
-          <div class="price">24,50 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit7.jpg" alt="Gel Nettoyant">
-          <div class="product-title">Gel Nettoyant Pureté</div>
-          <div class="product-desc">Nettoie en douceur, réduit les imperfections.</div>
-          <div class="price">18,90 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-      </div>
-
-      <h3 style="color:var(--accent)">Soins du corps</h3>
-      <div class="grid cols-3">
-        <article class="card">
-          <img src="assets/images/produit3.jpg" alt="Masque Nuit">
-          <div class="product-title">Masque Nuit Régénérant</div>
-          <div class="product-desc">Régénère et apaise la peau pendant votre sommeil.</div>
-          <div class="price">34,00 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit8.jpg" alt="Gommage">
-          <div class="product-title">Gommage Sucre & Coco</div>
-          <div class="product-desc">Exfolie, adoucit et illumine la peau instantanément.</div>
-          <div class="price">19,50 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit4.jpg" alt="Huile visage">
-          <div class="product-title">Huile Corps Satinée</div>
-          <div class="product-desc">Nourrit intensément et laisse un fini lumineux.</div>
-          <div class="price">27,00 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-      </div>
-
-      <h3 style="color:var(--accent)">Accessoires & parfums</h3>
-      <div class="grid cols-3">
-        <article class="card">
-          <img src="assets/images/produit5.jpg" alt="Brume Hydratante">
-          <div class="product-title">Brume Hydratante</div>
-          <div class="product-desc">Hydrate, rafraîchit et illumine le teint.</div>
-          <div class="price">15,90 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit9.jpg" alt="Roller Jade">
-          <div class="product-title">Roller de Jade Premium</div>
-          <div class="product-desc">Stimule la microcirculation et raffermit la peau.</div>
-          <div class="price">22,90 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-        <article class="card">
-          <img src="assets/images/produit6.jpg" alt="Crème Nuit">
-          <div class="product-title">Crème Nuit Confort</div>
-          <div class="product-desc">Hydratation profonde et apaisement immédiat.</div>
-          <div class="price">31,50 €</div>
-          <a class="btn-buy" href="#">Acheter</a>
-        </article>
-      </div>
+    <h3 style="color:var(--accent)">Soin du visage</h3>
+    <div class="grid cols-3"> ... </div>
   </section>
 
   <!-- BEAUTÉ -->
@@ -254,7 +182,7 @@
     <p style="color:var(--muted)">Découvrez nos conseils pour prendre soin de votre peau.</p>
   </section>
 
-  <!-- CONTACT -->
+ <!-- CONTACT -->
   <section id="contact" class="tab-panel" hidden>
     <h2>Contactez-nous</h2>
     <h3 style="text-align:center; margin-bottom:20px; color:var(--accent)">Envoyez-nous un message</h3>
