--- a/index.html
+++ b/index.html
@@ -67,12 +67,9 @@
     .cta:hover { opacity:0.85; transform:translateY(-3px); }
 
     section { padding: 60px 0; }
-section {
-  padding: 60px 24px;
-  border-radius: 24px; /* coins arrondis */
-  box-shadow: 0 6px 20px rgba(0,0,0,0.1); /* ombre */
-  background: var(--card); /* couleur de fond */
-  margin-bottom: 40px; /* espace entre les sections */
+section:nth-of-type(even) { 
+  background: var(--accent2); 
+  color: #fff; 
 }
 
 
