--- a/index.html
+++ b/index.html
@@ -1,126 +1,58 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bélli et Bien-être — Cosmétiques</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
-
-  <style>
-    :root {
-      --bg: #fdfdfd;
-      --accent: #000000;
-      --accent2: #6bb3b7;
-      --muted: #333;
-      --card: #fff;
-      --shadow: rgba(0, 0, 0, 0.15);
-      --text-footer: #000;
-      --text-hero: #000;
-    }
-
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: 'Inter', sans-serif; background: var(--bg); color: #111; line-height: 1.6; }
-
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: var(--accent2);
-      padding: 4px 0;
-      z-index: 1000;
-      box-shadow: 0 4px 12px var(--shadow);
-    }
-    .container { max-width: 1200px; margin: 0 auto; padding: 0 24px; }
-
-    .tabs {
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      overflow-x: auto;
-    }
-    .tab {
-      padding: 8px 12px;
-      border-radius: 12px;
-      background: transparent;
-      cursor: pointer;
-      font-weight: 600;
-      font-family: 'Playfair Display', serif;
-      flex: 0 0 auto;
-      white-space: nowrap;
-      transition: 0.3s;
-    }
-    .tab.active { background: var(--accent); color: #fff; box-shadow: 0 6px 18px var(--shadow); }
-
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 120px 24px 40px;
-      background: linear-gradient(rgba(183,107,163,0.4), rgba(107,179,183,0.4)), url('assets/images/hero-bg.jpg') center/cover no-repeat;
-      text-align: center;
-      color: var(--text-hero);
-    }
-    .hero h1 { font-size: clamp(28px,6vw,48px); margin-bottom: 16px; }
-    .hero p { font-size: clamp(16px,2.5vw,18px); margin-bottom: 24px; }
-    .cta { display: inline-block; padding: 12px 24px; border-radius: 24px; background: linear-gradient(135deg,var(--accent),var(--accent2)); color:#fff; text-decoration:none; font-weight:700; transition:0.3s; }
-    .cta:hover { opacity:0.85; transform:translateY(-3px); }
-
-    section { padding: 60px 0; }
-section:nth-of-type(even) { 
-  background: var(--accent2); 
-  color: #fff; 
+<!DOCTYPE html>
 }
-
-
-    .grid { display: grid; gap: 24px; }
-    .grid.cols-3 { grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); }
-
-    .card { background: var(--card); border-radius:16px; padding:20px; border:1px solid #eee; box-shadow:0 4px 20px var(--shadow); transition:0.3s; opacity:0; transform:translateY(20px); }
-    .card.visible { opacity:1; transform:translateY(0); transition:all 0.6s ease-out; }
-    .card:hover { transform:translateY(-6px); box-shadow:0 12px 24px var(--shadow); }
-    .card img { width:100%; border-radius:12px; margin-bottom:12px; }
-    .product-title { font-weight:700; margin-bottom:6px; color:#111; }
-    .product-desc { color:var(--muted); font-size:14px; margin-bottom:6px; }
-    .price { font-weight:800; color:var(--accent); }
-    .btn-buy { display:inline-block; margin-top:12px; padding:10px 20px; border-radius:24px; background:linear-gradient(135deg,var(--accent),var(--accent2)); color:#fff; text-decoration:none; font-weight:600; transition:0.3s; }
-    .btn-buy:hover { opacity:0.85; transform:translateY(-2px); }
-
-    .video-wrap { position:relative; padding-top:56.25%; border-radius:16px; overflow:hidden; background:#000; margin-top:16px; }
-    .video-wrap iframe { position:absolute; inset:0; width:100%; height:100%; border:0; }
-
-    .review-card { background: var(--card); padding:20px; border-radius:16px; border:1px solid #eee; box-shadow:0 4px 16px var(--shadow); margin-bottom:16px; opacity:0; transform:translateY(20px); transition:0.3s; }
-    .review-card.visible { opacity:1; transform:translateY(0); transition:all 0.6s ease-out; }
-
-    form {
-      display:flex;
-      flex-direction:column;
-      gap:16px;
-      max-width:600px;
-      margin:20px auto;
-      padding:30px;
-      background:#fff;
-      border-radius:16px;
-      box-shadow:0 4px 20px rgba(0,0,0,0.1);
-    }
-    input,textarea { padding:14px; border-radius:12px; border:1px solid #ccc; font-size:16px; width:100%; color:#111; }
-    textarea { min-height:140px; }
-    .btn-send { background: linear-gradient(135deg,var(--accent),var(--accent2)); color:#fff; padding:14px; border-radius:24px; border:0; font-weight:700; cursor:pointer; transition:0.3s; }
-    .btn-send:hover { opacity:0.85; transform:translateY(-2px); }
-
-    footer { border-top:2px solid var(--accent); padding:20px 12px; background:var(--accent2); color:#fff; text-align:center; }
-    .social-links a { color:#fff; margin:0 12px; text-decoration:none; font-weight:600; transition:0.3s; }
-    .social-links a:hover { opacity:0.8; transform:scale(1.05); }
-
-    @media(max-width:900px){
-      .hero { padding-top:140px; }
-      .grid.cols-3 { grid-template-columns:1fr; }
-      form { width:90%; padding:20px; }
-    }
-    @media(max-width:480px){
-      h1 { font-size:1.6rem; }
-      input,textarea { font-size:14px; }
-    }
+@media(max-width:480px){
+main {
+padding-top: 150px; /* Sécurité sur mobile */
+}
+}
+.tabs {
+display: flex;
+gap: 12px;
+justify-content: center;
+flex-wrap: wrap;
+overflow-x: auto;
+padding: 12px;
+}
+.tabs::-webkit-scrollbar { display: none; }
+.tab {
+padding: 10px 18px;
+border-radius: 14px;
+border: 2px solid #fff;
+background: transparent;
+color: #fff;
+cursor: pointer;
+font-size: 16px;
+}
+.tab.active {
+background: #000;
+color: #fff;
+}
+section {
+padding: 32px 20px;
+margin: 12px;
+background: var(--card);
+border-radius: 14px;
+box-shadow: 0 4px 10px var(--shadow);
+}
+/* Design alterné sur sections */
+section:nth-of-type(even) {
+background: linear-gradient(135deg, var(--accent), var(--accent2));
+color: #fff;
+}
+.video-wrap {
+width: 100%;
+max-width: 100%;
+border-radius: 12px;
+overflow: hidden;
+}
+footer {
+border-top: 2px solid var(--accent);
+padding: 10px 20px; /* Réduction footer */
+background: var(--accent2);
+color: #fff;
+text-align: center;
+margin-top: 40px;
+}
   </style>
 </head>
 <body>
