--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!-- Code HTML complet optimisé (responsive + ajustements header/footer + sections) -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bélli et Bien‑être</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Bélli et Bien-être — Cosmétiques</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+
 <style>
 :root {
 --bg: #fdfdfd;
@@ -16,80 +17,298 @@
 --text-footer: #000;
 --text-hero: #000;
 }
-body {
-margin: 0;
-font-family: Arial, sans-serif;
-background: var(--bg);
-color: #000;
-}
+
+* { box-sizing: border-box; margin: 0; padding: 0; }
+body { font-family: 'Inter', sans-serif; background: var(--bg); color: #111; line-height: 1.6; }
+
 header {
 position: fixed;
 top: 0;
 width: 100%;
 background: var(--accent2);
-color: #000;
-padding: 8px 0;
-text-align: center;
-z-index: 999;
-box-shadow: 0 2px 4px var(--shadow);
+padding: 4px 0;
+z-index: 1000;
+box-shadow: 0 4px 12px var(--shadow);
 }
-main {
-padding-top: 120px; /* Ajustement pour header fixe */
-}
-@media(max-width:480px){
-main {
-padding-top: 150px; /* Sécurité sur mobile */
-}
-}
+.container { max-width: 1200px; margin: 0 auto; padding: 0 24px; }
+
 .tabs {
 display: flex;
 gap: 12px;
-justify-content: center;
 flex-wrap: wrap;
 overflow-x: auto;
-padding: 12px;
 }
-.tabs::-webkit-scrollbar { display: none; }
 .tab {
-padding: 10px 18px;
-border-radius: 14px;
+padding: 8px 12px;
+border-radius: 12px;
+background: transparent;
+cursor: pointer;
+font-weight: 600;
+font-family: 'Playfair Display', serif;
+flex: 0 0 auto;
+white-space: nowrap;
+transition: 0.3s;
+}
+.tab.active { background: var(--accent); color: #fff; box-shadow: 0 6px 18px var(--shadow); }
 
-  <!-- CONTACT -->
-  <section id="contact" class="tab-panel" hidden>
-    <h2>Contactez-nous</h2>
-    <h3 style="text-align:center; margin-bottom:20px; color:var(--accent)">Envoyez-nous un message</h3>
-    <form action="https://formspree.io/f/xzzqbpld" method="POST">
-      <input type="text" name="name" placeholder="Votre nom" required>
-      <input type="email" name="email" placeholder="Votre e-mail" required>
-      <textarea name="message" placeholder="Votre message" required></textarea>
-      <button type="submit" class="btn-send">Envoyer le message</button>
-    </form>
-  </section>
+.hero {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+padding: 120px 24px 40px;
+background: linear-gradient(rgba(183,107,163,0.4), rgba(107,179,183,0.4)), url('assets/images/hero-bg.jpg') center/cover no-repeat;
+text-align: center;
+color: var(--text-hero);
+}
+.hero h1 { font-size: clamp(28px,6vw,48px); margin-bottom: 16px; }
+.hero p { font-size: clamp(16px,2.5vw,18px); margin-bottom: 24px; }
+.cta { display: inline-block; padding: 12px 24px; border-radius: 24px; background: linear-gradient(135deg,var(--accent),var(--accent2)); color:#fff; text-decoration:none; font-weight:700; transition:0.3s; }
+.cta:hover { opacity:0.85; transform:translateY(-3px); }
+
+section { padding: 60px 0; }
+section:nth-of-type(even) {
+background: var(--accent2);
+color: #fff;
+}
+
+
+.grid { display: grid; gap: 24px; }
+.grid.cols-3 { grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); }
+
+.card { background: var(--card); border-radius:16px; padding:20px; border:1px solid #eee; box-shadow:0 4px 20px var(--shadow); transition:0.3s; opacity:0; transform:translateY(20px); }
+.card.visible { opacity:1; transform:translateY(0); transition:all 0.6s ease-out; }
+.card:hover { transform:translateY(-6px); box-shadow:0 12px 24px var(--shadow); }
+.card img { width:100%; border-radius:12px; margin-bottom:12px; }
+.product-title { font-weight:700; margin-bottom:6px; color:#111; }
+.product-desc { color:var(--muted); font-size:14px; margin-bottom:6px; }
+.price { font-weight:800; color:var(--accent); }
+.btn-buy { display:inline-block; margin-top:12px; padding:10px 20px; border-radius:24px; background:linear-gradient(135deg,var(--accent),var(--accent2)); color:#fff; text-decoration:none; font-weight:600; transition:0.3s; }
+.btn-buy:hover { opacity:0.85; transform:translateY(-2px); }
+
+.video-wrap { position:relative; padding-top:56.25%; border-radius:16px; overflow:hidden; background:#000; margin-top:16px; }
+.video-wrap iframe { position:absolute; inset:0; width:100%; height:100%; border:0; }
+
+.review-card { background: var(--card); padding:20px; border-radius:16px; border:1px solid #eee; box-shadow:0 4px 16px var(--shadow); margin-bottom:16px; opacity:0; transform:translateY(20px); transition:0.3s; }
+.review-card.visible { opacity:1; transform:translateY(0); transition:all 0.6s ease-out; }
+
+form {
+display:flex;
+flex-direction:column;
+gap:16px;
+max-width:600px;
+margin:20px auto;
+padding:30px;
+background:#fff;
+border-radius:16px;
+box-shadow:0 4px 20px rgba(0,0,0,0.1);
+}
+input,textarea { padding:14px; border-radius:12px; border:1px solid #ccc; font-size:16px; width:100%; color:#111; }
+textarea { min-height:140px; }
+.btn-send { background: linear-gradient(135deg,var(--accent),var(--accent2)); color:#fff; padding:14px; border-radius:24px; border:0; font-weight:700; cursor:pointer; transition:0.3s; }
+.btn-send:hover { opacity:0.85; transform:translateY(-2px); }
+
+footer { border-top:2px solid var(--accent); padding:20px 12px; background:var(--accent2); color:#fff; text-align:center; }
+.social-links a { color:#fff; margin:0 12px; text-decoration:none; font-weight:600; transition:0.3s; }
+.social-links a:hover { opacity:0.8; transform:scale(1.05); }
+
+@media(max-width:900px){
+.hero { padding-top:140px; }
+.grid.cols-3 { grid-template-columns:1fr; }
+form { width:90%; padding:20px; }
+}
+@media(max-width:480px){
+h1 { font-size:1.6rem; }
+input,textarea { font-size:14px; }
+}
+</style>
+</head>
+<body>
+
+<header>
+<div class="container" style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap">
+<div style="display:flex;gap:12px;align-items:center">
+<img src="assets/images/logo.png" alt="Logo Bélli et Bien-être" style="border-radius:12px;width:60px">
+<div>
+<strong style="font-size:1.2rem">Bélli et Bien-être</strong><br>
+<small>Cosmétiques naturels & soins premium</small>
+</div>
+</div>
+<nav class="tabs" role="tablist" aria-label="Navigation principale" id="main-tabs">
+<button class="tab active" data-tab="accueil" role="tab" aria-selected="true">Accueil</button>
+<button class="tab" data-tab="produits" role="tab" aria-selected="false">Produits</button>
+<button class="tab" data-tab="beaute" role="tab" aria-selected="false">Beauté & Conseil</button>
+<button class="tab" data-tab="contact" role="tab" aria-selected="false">Contact</button>
+</nav>
+</div>
+</header>
+
+<main class="container">
+<!-- ACCUEIL -->
+<section id="accueil" class="tab-panel">
+<div class="hero">
+<h1>Bienvenue chez Bélli et Bien-être</h1>
+<p>Des cosmétiques naturels, testés dermatologiquement, pour sublimer votre peau.</p>
+<a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
+</div>
+
+<div style="display:flex;flex-wrap:wrap;gap:24px;margin-top:40px;">
+<div style="flex:1;min-width:300px;">
+<h2>Vidéo de présentation</h2>
+<div class="video-wrap">
+<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Vidéo Éclat Beauté" allowfullscreen loading="lazy"></iframe>
+</div>
+</div>
+<div style="flex:1;min-width:300px;">
+<h2>Avis de nos clients</h2>
+<div class="review-card visible"><strong>Marie D.</strong><p>"Les produits ont transformé ma peau. Je recommande !"</p></div>
+<div class="review-card visible"><strong>Lucas T.</strong><p>"Service rapide et produits excellents."</p></div>
+</div>
+</div>
+</section>
+
+<!-- PRODUITS -->
+<section id="produits" class="tab-panel" hidden>
+<h2>Nos produits</h2>
+
+<!-- Soin du visage -->
+<h3 style="color:var(--accent)">Soin du visage</h3>
+<div class="grid cols-3">
+<article class="card">
+<img src="assets/images/produit1.jpg" alt="Sérum Éclat">
+<div class="product-title">Sérum Éclat</div>
+<div class="product-desc">Illumine, hydrate et unifie le teint.</div>
+<div class="price">29,90 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit2.jpg" alt="Crème de Jour">
+<div class="product-title">Crème de Jour Réparatrice</div>
+<div class="product-desc">Hydratation intense, texture douce et non grasse.</div>
+<div class="price">24,50 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit7.jpg" alt="Gel Nettoyant">
+<div class="product-title">Gel Nettoyant Pureté</div>
+<div class="product-desc">Nettoie en douceur, réduit les imperfections.</div>
+<div class="price">18,90 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+</div>
+
+<!-- Soins du corps -->
+<h3 style="color:var(--accent)">Soins du corps</h3>
+<div class="grid cols-3">
+<article class="card">
+<img src="assets/images/produit3.jpg" alt="Masque Nuit">
+<div class="product-title">Masque Nuit Régénérant</div>
+<div class="product-desc">Régénère et apaise la peau pendant votre sommeil.</div>
+<div class="price">34,00 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit8.jpg" alt="Gommage">
+<div class="product-title">Gommage Sucre & Coco</div>
+<div class="product-desc">Exfolie, adoucit et illumine la peau instantanément.</div>
+<div class="price">19,50 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit4.jpg" alt="Huile Corps">
+<div class="product-title">Huile Corps Satinée</div>
+<div class="product-desc">Nourrit intensément et laisse un fini lumineux.</div>
+<div class="price">27,00 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+</div>
+
+<!-- Accessoires & parfums -->
+<h3 style="color:var(--accent)">Accessoires & parfums</h3>
+<div class="grid cols-3">
+<article class="card">
+<img src="assets/images/produit5.jpg" alt="Brume Hydratante">
+<div class="product-title">Brume Hydratante</div>
+<div class="product-desc">Hydrate, rafraîchit et illumine le teint.</div>
+<div class="price">15,90 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit9.jpg" alt="Roller Jade">
+<div class="product-title">Roller de Jade Premium</div>
+<div class="product-desc">Stimule la microcirculation et raffermit la peau.</div>
+<div class="price">22,90 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+<article class="card">
+<img src="assets/images/produit6.jpg" alt="Crème Nuit">
+<div class="product-title">Crème Nuit Confort</div>
+<div class="product-desc">Hydratation profonde et apaisement immédiat.</div>
+<div class="price">31,50 €</div>
+<a class="btn-buy" href="#">Acheter</a>
+</article>
+</div>
+</section>
+
+<!-- BEAUTÉ & CONSEIL -->
+<section id="beaute" class="tab-panel" hidden>
+<h2>Beauté & Conseil</h2>
+
+<h3>Routine Matinale</h3>
+<p style="color:var(--muted)">Nettoyez votre visage, appliquez un sérum hydratant et terminez par votre crème solaire pour protéger votre peau.</p>
+<div class="video-wrap">
+<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Routine Matinale" allowfullscreen loading="lazy"></iframe>
+</div>
+
+<h3>Routine du Soir</h3>
+<p style="color:var(--muted)">Démaquillez-vous, appliquez un sérum régénérant et terminez avec votre crème de nuit pour nourrir la peau pendant le sommeil.</p>
+<div class="video-wrap">
+<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Routine du Soir" allowfullscreen loading="lazy"></iframe>
+</div>
+
+<h3>Conseils Bien-être</h3>
+<p style="color:var(--muted)">Buvez suffisamment d'eau, dormez bien et faites des pauses détente pour améliorer l'éclat de votre peau.</p>
+<div class="video-wrap">
+<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Conseils Bien-être" allowfullscreen loading="lazy"></iframe>
+</div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="tab-panel" hidden>
+<h2>Contactez-nous</h2>
+<h3 style="text-align:center; margin-bottom:20px; color:var(--accent)">Envoyez-nous un message</h3>
+<form action="https://formspree.io/f/xzzqbpld" method="POST">
+<input type="text" name="name" placeholder="Votre nom" required>
+<input type="email" name="email" placeholder="Votre e-mail" required>
+<textarea name="message" placeholder="Votre message" required></textarea>
+<button type="submit" class="btn-send">Envoyer le message</button>
+</form>
+</section>
 </main>
 
 <footer>
-  <div class="container">
-    © <strong>Bélli et Bien-être</strong> — Tous droits réservés
-    <div class="social-links">
-      <a href="#">Facebook</a>
-      <a href="#">Instagram</a>
-      <a href="#">Twitter</a>
-    </div>
-  </div>
+<div class="container">
+© <strong>Bélli et Bien-être</strong> — Tous droits réservés
+<div class="social-links">
+<a href="#">Facebook</a>
+<a href="#">Instagram</a>
+<a href="#">Twitter</a>
+</div>
+</div>
 </footer>
 
 <script>
-  const tabs = document.querySelectorAll('.tab');
-  const panels = document.querySelectorAll('.tab-panel');
-  tabs.forEach(tab => {
-    tab.addEventListener('click', () => {
-      tabs.forEach(t => t.classList.remove('active'));
-      tab.classList.add('active');
-      panels.forEach(p => p.hidden = (p.id !== tab.dataset.tab));
-    });
-  });
-  const observer = new IntersectionObserver(entries => { entries.forEach(entry => { if(entry.isIntersecting) entry.target.classList.add('visible'); }); }, { threshold: 0.1 });
-  document.querySelectorAll('.card, .review-card').forEach(el => observer.observe(el));
+const tabs = document.querySelectorAll('.tab');
+const panels = document.querySelectorAll('.tab-panel');
+tabs.forEach(tab => {
+tab.addEventListener('click', () => {
+tabs.forEach(t => t.classList.remove('active'));
+tab.classList.add('active');
+panels.forEach(p => p.hidden = (p.id !== tab.dataset.tab));
+});
+});
+const observer = new IntersectionObserver(entries => { entries.forEach(entry => { if(entry.isIntersecting) entry.target.classList.add('visible'); }); }, { threshold: 0.1 });
+document.querySelectorAll('.card, .review-card').forEach(el => observer.observe(el));
 </script>
 
 </body>
