--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@ padding: 4px 0;
 z-index: 1000;
 box-shadow: 0 4px 12px var(--shadow);
 }
+header img {
+  width: 50px;
+  height: auto;
+  border-radius: 12px;
+}
 
 
 .container { max-width: 1200px; margin: 0 auto; padding: 0 24px; }
@@ -131,7 +136,7 @@ input,textarea { font-size:14px; }
 <header>
 <div class="container" style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap">
 <div style="display:flex;gap:12px;align-items:center">
-<img src="assets/images/logo.png" alt="Logo Bélli et Bien-être" style="border-radius:12px;width:40px">
+<img src="assets/images/logo.png" alt="Logo Bélli et Bien-être" style="border-radius:12px;width:60px">
 <div>
 <strong style="font-size:1.2rem">Bélli et Bien-être</strong><br>
 <small>Cosmétiques naturels & soins premium</small>
