--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ input,textarea { font-size:14px; }
 <header>
 <div class="container" style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap">
 <div style="display:flex;gap:12px;align-items:center">
-<img src="assets/images/logo.png" alt="Logo Bélli et Bien-être" style="border-radius:12px;width:60px">
+<img src="IMG_8042.JPG" alt="Logo Bélli et Bien-être" style="border-radius:12px;width:60px">
 <div>
 <strong style="font-size:1.2rem">Bélli et Bien-être</strong><br>
 <small>Cosmétiques naturels & soins premium</small>
