--- a/index.html
+++ b/index.html
@@ -129,6 +129,21 @@ form { width:90%; padding:20px; }
 h1 { font-size:1.6rem; }
 input,textarea { font-size:14px; }
 }
+  /* Séparateurs pour les sections */
+section {
+  padding: 60px 0;
+  border-top: 2px solid var(--accent2);
+  margin: 40px 0;
+}
+/* Encadrement des titres H2 */
+h2 {
+  border: 2px solid var(--accent2);
+  padding: 12px 20px;
+  border-radius: 12px;
+  display: inline-block;
+  background: var(--card);
+  margin-bottom: 24px;
+}
 </style>
 </head>
 <body>
