--- a/index.html
+++ b/index.html
@@ -144,6 +144,40 @@ h2 {
   background: var(--card);
   margin-bottom: 24px;
 }
+  /* Beauté & Conseil design */
+.beauty-section {
+  margin-bottom: 40px;
+  padding-bottom: 40px;
+  border-bottom: 2px solid var(--accent2);
+}
+
+.beauty-card {
+  background: var(--card);
+  padding: 20px;
+  border-radius: 16px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+  margin-top: 16px;
+}
+
+.beauty-card p {
+  color: var(--muted);
+  margin-bottom: 12px;
+}
+
+h2 {
+  border: 2px solid var(--accent2);
+  padding: 12px 20px;
+  border-radius: 12px;
+  display: inline-block;
+  background: var(--card);
+  margin-bottom: 32px;
+}
+
+h3 {
+  margin-bottom: 12px;
+  color: var(--accent);
+  font-weight: 600;
+}
 </style>
 </head>
 <body>
