--- a/index.html
+++ b/index.html
@@ -202,6 +202,18 @@ h3 {
   color: var(--accent);
   font-weight: 600;
 }
+  .styled-h3 {
+  color: var(--accent);
+  font-weight: 700;
+  font-size: 1.6rem;
+  padding: 10px 18px;
+  border-left: 6px solid var(--accent2);
+  background: rgba(107,179,183,0.12);
+  border-radius: 8px;
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
 </style>
 </head>
 <body>
@@ -265,7 +277,7 @@ main.container {
 <h2>Nos produits</h2>
 
 <!-- Soin du visage -->
-<h3 style="color:var(--accent)">Nos soins capillaires</h3>
+<h3 class="styled-h3">Nos soins capillaires</h3>
 <div class="grid cols-3">
 <article class="card">
 <img src="assets/images/produit1.jpg" alt="Sérum Éclat">
