--- a/index.html
+++ b/index.html
@@ -274,6 +274,14 @@ footer {
   transition: 0.3s;
 }
 .social-links a:hover { opacity: 0.8; transform: scale(1.05); }
+   .presentation p {
+  text-align: justify;
+  text-justify: inter-word; /* améliore la justification */
+  margin-bottom: 12px;
+  line-height: 1.7;
+}
+h3 { text-decoration: underline; }
+
 </style>
 
 </head>
@@ -307,10 +315,9 @@ main.container {
 <a href="#produits" class="cta" onclick="document.querySelector('[data-tab=\'produits\']').click()">Découvrir nos produits</a>
 </div>
   <!-- 🌿 SECTION PRÉSENTATION AJOUTÉE ICI -->
-<section style="margin-top:40px; padding:20px; background:#fff; border-radius:16px; box-shadow:0 4px 20px rgba(0,0,0,0.1);">
+<section style="margin-top:40px; padding:20px; background:#fff; border-radius:16px; box-shadow:0 4px 20px rgba(0,0,0,0.1); text-align: justify;">
 <h2>Présentation</h2>
-<p>🌿 <strong>Bienvenue chez Belli et Bien-être</strong> 🌿</p>
-<p><strong>Sublimez votre beauté au naturel</strong></p>
+<p>🌿 <strong>Sublimez votre beauté au naturel</strong> 🌿</p>
 <p>Chez Belli et Bien-être, nous célébrons la beauté authentique à travers des produits capillaires naturels, des cosmétiques soigneusement sélectionnés, et des accessoires tendance pensés pour révéler votre éclat au quotidien.</p>
 <p>✨ Que vous ayez des cheveux crépus, bouclés ou frisés, notre gamme a été conçue pour nourrir, protéger et magnifier chaque texture avec douceur et efficacité.</p>
 <p>🛍️ Découvrez aussi nos accessoires cheveux stylés, nos produits de bien-être (serviette hygiénique lavable), et toute une sélection d’articles inspirés par le soin de soi et la féminité assumée.</p>
@@ -327,8 +334,9 @@ main.container {
 </div>
 <div style="flex:1;min-width:300px;">
 <h2>Avis de nos clients</h2>
-<div class="review-card visible"><strong>Marie D.</strong><p>"Les produits ont transformé ma peau. Je recommande !"</p></div>
-<div class="review-card visible"><strong>Lucas T.</strong><p>"Service rapide et produits excellents."</p></div>
+<div class="review-card visible"><strong>Malick C.</strong><p>"Les produits ont transformé ma peau. Je recommande !"</p></div>
+<div class="review-card visible"><strong>Aicha T.</strong><p>"Service rapide et produits excellents."</p></div>
+   <div class="review-card visible"><strong>Amina D.</strong><p>"je kiffe."</p></div>
 </div>
 </div>
 </section>
