--- a/index.html
+++ b/index.html
@@ -20,18 +20,9 @@
   --text-footer: #fff;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'Inter', sans-serif;
-  background: var(--bg);
-  color: #111;
-  line-height: 1.6;
-}
+/* Reset & global */
+* { box-sizing: border-box; margin: 0; padding: 0; }
+body { font-family: 'Inter', sans-serif; background: var(--bg); color: #111; line-height: 1.6; }
 
 /* Header */
 header {
@@ -39,19 +30,11 @@ header {
   top: 0;
   width: 100%;
   background: var(--accent2);
-  padding: 8px 0;
+  padding: 10px 0;
   z-index: 1000;
   box-shadow: 0 8px 24px var(--shadow);
 }
-header img { width: 50px; height: auto; border-radius: 12px; }
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
-
-/* Tabs */
+header img { width: 50px; border-radius: 12px; }
 .tabs {
   display: flex;
   gap: 12px;
@@ -60,7 +43,7 @@ header img { width: 50px; height: auto; border-radius: 12px; }
   align-items: center;
 }
 .tab {
-  padding: 6px 10px;
+  padding: 6px 12px;
   border-radius: 12px;
   background: transparent;
   cursor: pointer;
@@ -70,11 +53,7 @@ header img { width: 50px; height: auto; border-radius: 12px; }
   white-space: nowrap;
   transition: 0.3s;
 }
-.tab.active {
-  background: var(--accent);
-  color: #fff;
-  box-shadow: 0 6px 18px var(--shadow);
-}
+.tab.active { background: var(--accent); color: #fff; box-shadow: 0 6px 18px var(--shadow); }
 
 /* Hero */
 .hero {
@@ -87,7 +66,7 @@ header img { width: 50px; height: auto; border-radius: 12px; }
   text-align: center;
   color: var(--accent);
 }
-.hero h1 { font-size: clamp(24px,6vw,48px); margin-bottom: 16px; }
+.hero h1 { font-size: clamp(28px,6vw,48px); margin-bottom: 16px; }
 .hero p { font-size: clamp(14px,2.5vw,18px); margin-bottom: 24px; }
 .cta {
   display: inline-block;
@@ -101,11 +80,48 @@ header img { width: 50px; height: auto; border-radius: 12px; }
 }
 .cta:hover { opacity:0.85; transform:translateY(-3px); }
 
-/* Sections */
+/* Sections & titres */
 section { padding: 60px 0; }
 section:nth-of-type(even) { background: var(--accent2); color: #fff; }
+h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: var(--accent);
+  text-align: center;
+  padding-bottom: 8px;
+  margin-bottom: 24px;
+  position: relative;
+}
+h2::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 60px;
+  height: 3px;
+  background: linear-gradient(90deg, var(--accent), var(--accent2));
+  border-radius: 3px;
+}
+h3 {
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: var(--accent);
+  margin-bottom: 16px;
+  position: relative;
+}
+h3::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 2px;
+  background: var(--accent2);
+  margin-top: 4px;
+  border-radius: 2px;
+}
 
-/* Grid produit */
+/* Grid produits (2 cartes visibles sur mobile) */
 .grid {
   display: flex;
   gap: 16px;
@@ -113,16 +129,43 @@ section:nth-of-type(even) { background: var(--accent2); color: #fff; }
   padding-bottom: 10px;
 }
 .grid::-webkit-scrollbar { display: none; }
-
 .card {
-  flex: 0 0 250px;
+  flex: 0 0 220px;
   background: var(--card);
   border-radius:16px;
-  padding:20px;
+  padding:16px;
   box-shadow:0 4px 20px var(--shadow);
   transition:0.3s;
+  position: relative;
 }
-.card img { width:100%; border-radius:12px; margin-bottom:12px; }
+.card:hover { transform: translateY(-4px); box-shadow: 0 10px 20px var(--shadow); }
+
+/* Double image pour chaque produit */
+.card img {
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 8px;
+  cursor: pointer;
+}
+.card .img-wrapper {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 12px;
+}
+.card .img-wrapper img { 
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.3s;
+}
+.card .img-wrapper img.second { opacity: 0; }
+.card .img-wrapper:hover img.second { opacity: 1; }
+.card .img-wrapper:hover img.first { opacity: 0; }
+
 .product-title { font-weight:700; margin-bottom:6px; color:#111; }
 .product-desc { color:var(--muted); font-size:14px; margin-bottom:6px; }
 .price { font-weight:800; color:var(--accent); }
@@ -140,7 +183,6 @@ footer {
   font-family: 'Inter', sans-serif;
   padding: 40px 20px 20px 20px;
 }
-
 .footer-container {
   display: flex;
   justify-content: space-between;
@@ -149,7 +191,6 @@ footer {
   margin: 0 auto;
   gap: 20px;
 }
-
 .footer-col { flex: 1 1 250px; }
 .footer-col h4 { font-size: 1.1rem; margin-bottom: 12px; color: #fff; text-transform: uppercase; }
 .footer-col p, .footer-col a { font-size: 0.95rem; color: #f9f9f9; text-decoration: none; }
@@ -160,18 +201,18 @@ footer {
 .footer-socials a:hover { transform: scale(1.1); background: #f0f0f0; }
 .footer-bottom { text-align: center; font-size: 0.9rem; padding: 12px 0; border-top: 1px solid rgba(255,255,255,0.3); margin-top: 20px; }
 
-/* Responsivité globale */
+/* Responsivité */
 @media(max-width: 900px){
   .hero { padding-top: 120px; }
   .grid { flex-wrap: nowrap; overflow-x: auto; }
+  .card { flex: 0 0 45%; }
 }
-
 @media(max-width: 600px){
   .hero { padding-top: 100px; }
+  .card { flex: 0 0 70%; }
   .footer-container { flex-direction: column; text-align: center; }
   .footer-socials { justify-content: center; }
 }
-
 
 </style>
 
@@ -284,27 +325,35 @@ main.container {
 <!-- Cosmétiques & bien-être -->
 <h3 class="styled-h3">Cosmétiques & bien-être</h3>
 <div class="product-slider">
-article class="card">
-    <img src="assets/images/produit3.jpg" alt="Masque Nuit">
-    <div class="product-title">Masque Nuit Régénérant</div>
-    <div class="product-desc">Régénère et apaise la peau pendant votre sommeil.</div>
-    <div class="price">34,00 €</div>
-    <a class="btn-buy" href="#">Acheter</a>
+  <article class="card">
+    <img src="assets/images/produit1.jpg" alt="Sérum Éclat">
+    <div class="product-title">Sérum Éclat</div>
+    <div class="product-desc">Illumine, hydrate et unifie le teint.</div>
+    <div class="price">29,90 €</div>
+    <a class="btn-buy" href="https://pay.wave.com/m/M_sn_zy5ahAQs1Ctt/c/sn/?amount=2525">Acheter</a>
   </article>
   <article class="card">
-    <img src="assets/images/produit8.jpg" alt="Gommage">
-    <div class="product-title">Gommage Sucre & Coco</div>
-    <div class="product-desc">Exfolie, adoucit et illumine le peau instantanément.</div>
-    <div class="price">19,50 €</div>
-    <a class="btn-buy" href="#">Acheter</a>
+    <img src="assets/images/produit2.jpg" alt="Crème de Jour">
+    <div class="product-title">Crème de Jour Réparatrice</div>
+    <div class="product-desc">Hydratation intense, texture douce et non grasse.</div>
+    <div class="price">24,50 €</div>
+    <a class="btn-buy" href="https://pay.wave.com/m/M_sn_zy5ahAQs1Ctt/c/sn/?amount=2525">Acheter</a>
+  </article>
+  <article class="card">
+    <img src="assets/images/produit7.jpg" alt="Gel Nettoyant">
+    <div class="product-title">Gel Nettoyant Pureté</div>
+    <div class="product-desc">Nettoie en douceur, réduit les imperfections.</div>
+    <div class="price">18,90 €</div>
+    <a class="btn-buy" href="https://pay.wave.com/m/M_sn_zy5ahAQs1Ctt/c/sn/?amount=2525">Acheter</a>
   </article>
 </div>
+
 
 
 <!-- Nouveautés & meilleures ventes -->
 <h3 class="styled-h3">Nouveautés & meilleures ventes</h3>
 <div class="product-slider">
-article class="card">
+  <article class="card">
     <img src="assets/images/produit3.jpg" alt="Masque Nuit">
     <div class="product-title">Masque Nuit Régénérant</div>
     <div class="product-desc">Régénère et apaise la peau pendant votre sommeil.</div>
